# identifiable-latent-metric-space

./: .gitignore  LICENSE  README.md  pyproject.toml
bash/: notebook.sh  setup.sh  setup_hpc.sh
bash_queue/: run_geodesics.sh  run_geodesics_batch_2.sh  run_geodesics_runpod.sh  run_geodesics_smoketest.sh  run_geodesics_smoketest_runpod.sh  train_celeba.sh  train_celeba1.sh  train_celeba2.sh  train_celeba3.sh  train_celeba4.sh  train_celeba5.sh  train_celeba_queue.sh  train_celeba_runpod.sh
configs/: config.yaml  config_geodesic_inference.yaml
configs/datamodule/: celeba.yaml  cifar.yaml  fmnist.yaml
configs/decoder/: basic_conv.yaml  basic_dense.yaml  celeba.yaml
configs/encoder/: basic_conv.yaml  basic_dense.yaml  celeba.yaml
configs/grad_clipping/: global_norm.yaml
configs/inference/: ensambe_geodesics_seed_2.yaml  ensambe_geodesics_seed_2_42.yaml  ensambe_geodesics_seed_42.yaml  ensambe_geodesics_seed_4_71_10.yaml  ensambe_geodesics_seed_51_7_72.yaml  ensambe_geodesics_seed_53_52.yaml  ensambe_geodesics_seed_6.yaml  ensambe_geodesics_seed_60_50_61.yaml  ensambe_geodesics_seed_65_63_62.yaml  rbf_geodesics.yaml  (+9 more)
databuilders/: data.py
eugene/: celeba.py  geodesic.py  notebook.ipynb  percept.ipynb  stats.py  vae.py  vae_old.py  visualise_geo_decode.ipynb
notebooks/: beta-sheduling.ipynb  jax-vae-celeba.ipynb  lr_schedule_plots.ipynb  notebook.ipynb  results_celeba.ipynb  results_mnist.ipynb  tfds.ipynb  vae-mnist-jax.ipynb
scripts/: checkpoints.py  inference_geodesics.py  inference_geodesics_postprocessing.py  inference_reconstructions.py  train.py
(+67 files in other folders)
